根据提供的diff信息，新生成的提交信息可以是：
"优化代码逻辑，修复空指针异常，增强代码健壮性。"